TestController may reuse a view that used window.open(), which prevents process-swapping and causes flakiness https://bugs.webkit.org/show_bug.cgi?id=203981

Reviewed by Ryosuke Niwa.

Tools:

Stop reusing WebViews that have created other WebViews (via window.open()) since this prevents process-swapping
and may therefore cause flakiness (see Bug 203965).

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::createOtherPage):
(WTR::TestController::ensureViewSupportsOptionsForTest):
* WebKitTestRunner/TestController.h:

LayoutTests:

Drop temporary flakiness workaround that was landed in r252214.

* http/tests/inspector/target/target-events-for-provisional-page.html:

Canonical link: https://commits.webkit.org/217323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252228 268f45cc-cd09-0410-ab3c-d52691b4dbfc